<resources>
    <string name="app_name">Кулинарная книга</string>
    <string name="action_settings">Settings</string>
    <string name="category_image">Category image</string>
    <string name="search">поиск</string>
    <string name="input_title">Введите название…</string>
    <string name="cooking_time_hint">Время приготовления…</string>
    <string name="recipe_image_description">Фото блюда</string>
    <string name="save_recipe">Сохранить рецепт</string>
    <string name="ingredients">Ингридиенты</string>
    <string name="cooking">Приготовление</string>
    <string name="ingridients_hint">Ингридиент</string>
    <string name="steps_hint">%1$s.</string>
    <string name="title_activity_recipe_list">RecipeListActivity</string>
    <string name="favorite">Избранное</string>
    <string name="cooking_time">Время приготовления : %1$s</string>

    <string name="image_find_error">Изображение не найдено!</string>
    <string name="add_recipe_act_name">Добавить рецепт</string>
    <string name="by_time">По времени</string>
    <string name="by_name">По названию</string>

    <string name="must_input_numbers">Введите цифры!</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="watch_icon">Watch icon</string>
    <string name="cook_time">Время приготовления :</string>
    <string name="delete">Удалить</string>
    <string name="input_cooking_time">Введите время приготовления!</string>
    <string name="update_recipe">Редактировать рецепт</string>
    <string name="recipe_saved">Рецепт сохранен!</string>
    <string name="start">Начать</string>
    <string name="restart">Перезапустить</string>
    <string name="stop">Отмена</string>
</resources>
