<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        tools:context="com.example.muffin.cookingbook.activities.AddRecipeActivity">

        <EditText
            android:id="@+id/title_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/input_title"
            android:inputType="text"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/add_recipe_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/recipe_image_description"
            app:srcCompat="@drawable/ic_photo_camera_black"
            />

        <Spinner
            android:layout_marginTop="5dp"
            android:entries="@array/categories"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/cooking_time_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/cooking_time_hint"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            />

        <FrameLayout
            android:id="@+id/ingredients_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cooking_time_editText"
            tools:layout_editor_absoluteY="294dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:padding="2dp"
                android:text="@string/ingredients"
                android:textColor="@android:color/white"
                android:textStyle="italic"/>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_ingredient_fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_black_24dp"
                />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/ingredients_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            />


        <FrameLayout
            android:id="@+id/steps_layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/ingredients_layout"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cyan"
                android:padding="2dp"
                android:text="@string/cooking"
                android:textColor="@android:color/white"
                android:textStyle="italic"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_step_fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_black_24dp"
                />

        </FrameLayout>


        <LinearLayout
            android:id="@+id/steps_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            />


        <Button
            android:id="@+id/create_recipe_button"
            style="@style/AddRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/save_recipe"
            />


    </LinearLayout>
</ScrollView>